# snowflake-cortex-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
cortex_agents/: __init__.py  _analyst_messages.py  _analyst_response.py  _base_response.py  _retry.py  _streaming.py  agent.py  analyst.py  async_agent.py  async_analyst.py  base.py  chart_utils.py  utils.py
cortex_agents/core/: __init__.py  _messages.py  _transport.py  entity.py  feedback.py  response.py  run.py  threads.py
docs/: changelog.md  contributing.md  extra.css  index.md  installation.md  license.md  llms.txt  quick_reference.md  quickstart.md
docs/api/: agent.md  analyst.md  async_agent.md  async_analyst.md  base.md  chart_utils.md  core_entity.md  core_feedback.md  core_run.md  core_threads.md  overview.md  response.md  utils.md
docs/guides/: agents.md  agents_threads.md  analyst.md  chart_plotting.md  threads_api.md
examples/: example_agent.py  example_agent_async.py  example_analyst.py  example_streaming.py  example_streamlit_streaming.py  example_streamlit_streaming_async.py
tests/: __init__.py  conftest.py  test_analyst_messages.py  test_base.py  test_chart_utils.py  test_messages.py  test_path_encoding.py  test_response.py  test_retry.py  test_run.py  test_sse_parsing.py  test_transport.py  test_utils.py
